# cover-class

./: .gitignore  Makefile  README.md  config  pyproject.toml
models/: README.md  report_spectf.py  training_example.py  training_spectf.py
models/config/: spectf_ex.yaml  spectf_jl.yaml  spectf_jl_mean.yaml  spectf_jl_mean_1k.yaml  spectf_jl_mean_2x_1k.yaml  spectf_jl_mean_2x_500.yaml
models/spectf/: report_spectf.py  scene_spectf.py  sweep_spectf.py  training_spectf.py
models/spectf/v1/: 20_focal.pth  README.md  data_config.yaml  spectf_sweep1.yaml
src/cover_class/: geotiff.py  outlier_detection.py  train.py  utils.py
src/cover_class/config/: README.md  data_nc12_ns05.yml  data_nc12_ns1.yml  data_nc12_ns2.yml  data_nc12_ns3.yml  dataloader.yml  dataloader_jl.yml  dataloader_ym.yml  dataloader_ym_km100.yml  dataloader_ym_km100_nc1.yml  sim-mixture-probs.csv  static.yml
src/cover_class/dataloader/: __init__.py  const.py  dataloader.py  utils.py
src/cover_class/reporting/: __init__.py  download_scenes.py  json_report.py  metrics.py  pdf_report.py  report.py  report_config.py  utils.py
src/cover_class/simulation/: __init__.py  args.py  const.py  force_fractions.py  sim_utils.py  simulate.py
src/cover_class/static/: preprocessor.py  retrieval.py
src/cover_class/subsample/: __init__.py  (+3 more)
static/: spectral_noise_covariances.csv
tests/dataloader/: dataloader_test.py
tests/reporting/: report_test.py
tests/simulation/: simulate_test.py
tests/static/: retrieval_test.py
tests/subsample/: forward_pipeline_test.py  subsampler_test.py  utils_test.py
(+1 files in other folders)
