[project]
name = "cover-data-orchestrator"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  {name = "Michael Kiper"},
]
maintainers = [
  {name = "Michael Kiper", email = "michael.kiper@jpl.nasa.gov"},
]
dependencies = [
  "torch>=2.8.0",
  "msgspec>=0.19.0",
  "numpy>=2.3.2",
  "pyyaml>=6.0.2",
  "h5py>=3.14.0",
  "pandas>=2.3.2",
  "scikit-learn>=1.7.1",
  "requests>=2.32.5",
  "scikit-learn-extra>=0.3.0",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }
packages = ["cover_class"]
